# propify-bot-sdks

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml
abi/: Cargo.toml  README.md
abi/src/: enums.rs  lib.rs  wire.rs
assemblyscript/: .gitignore  README.md  asconfig.account-context-shim.json  asconfig.decoder-shim.json  asconfig.json  build-repro.sh  package.json  pnpm-lock.yaml
assemblyscript/assembly/: bot.ts  decimal.ts  imports.ts  index.ts  noop.ts  sample.ts  types.ts  wire.ts
assemblyscript/test/: account-context-shim.ts  account-context.test.mjs  decoder-shim.ts  decoder.test.mjs  sample.test.mjs
docs/: writing-a-bot.md
rust/: Cargo.toml  README.md  build.rs
rust/examples/: minimal_bot.rs
rust/src/: bot.rs  ffi.rs  lib.rs
tinygo/: .gitignore  README.md  build-repro.sh  go.mod
tinygo/propify/: bot.go  decimal.go  imports.go  imports_host.go  memory.go  types.go  types_test.go  wire.go
tinygo/sample/: main.go
tools/manifest-encoder/: Cargo.toml  README.md  manifest.example.json
tools/manifest-encoder/src/: main.rs
